# dm-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini
examples/dify/: dify-dm-mcp-app.yml
resources/docs/: _not-found.html  _not-found.txt  configuration.html  configuration.txt  console.html  development.html  development.txt  getting-started.html  index.html  intro.txt
resources/docs/_not-found/: __next._head.txt  __next._tree.txt
resources/docs/_pagefind/: pagefind-entry.json  pagefind.zh-cn_29121973cbb95.pf_meta  pagefind.zh-cn_298f66833b3d2.pf_meta  pagefind.zh-cn_299be18695f27.pf_meta  pagefind.zh-cn_301eeac332d75.pf_meta  pagefind.zh-cn_31730cbf58e5e.pf_meta  pagefind.zh-cn_459c6899e3ed4.pf_meta  pagefind.zh-cn_6018bb70bab06.pf_meta  pagefind.zh-cn_71e1d47c23638.pf_meta  pagefind.zh-cn_71f5adf6dbb36.pf_meta  pagefind.zh-cn_9d4a6eec7ad40.pf_meta  pagefind.zh-cn_cbc11e14bbbb9.pf_meta  pagefind.zh-cn_f53f6944566b6.pf_meta  pagefind.zh-cn_fc39e83322ae2.pf_meta
resources/docs/cli/: dmctl-config.html  dmctl-config.txt  dmctlx-config.html  dmctlx-config.txt  output-truncation.html  output-truncation.txt  overview.html  usage.html
resources/docs/configuration/: __next._head.txt  __next._tree.txt
resources/docs/console/: __next._full.txt  __next._head.txt  __next._tree.txt  dashboard.html  datasource.html  metadata.html  metadata.txt  ssh-host.html  token.html
resources/docs/development/: __next._head.txt  __next._tree.txt
resources/docs/getting-started/: __next.$oc$mdxPath.txt  __next._full.txt  __next._head.txt  __next._tree.txt
resources/docs/intro/: __next._head.txt  __next._tree.txt
resources/docs/mcp/: auth.html
resources/static/: index.html
resources/static/assets/: index-BhqLRDys.js  index-DbDIZRha.css
resources/web/: index.html
resources/web/assets/: index-Bbm10_Pt.css  index-wRCJzqkA.js
scripts/: dump_mcp_schemas.py
src/: main.py
src/dm_mcp/: __init__.py
src/dm_mcp/api/: __init__.py  base.py
src/dm_mcp/app/: auth_backend.py  context.py  routes.py  server.py
src/dm_mcp/common/: messages.py
src/dm_mcp/core/: __init__.py  sql_guard.py
src/dm_mcp/data/: dm_system_tables.jsonl  dm_system_views.jsonl
src/dm_mcp/middlewares/: __init__.py  audit_middleware.py  metrics_middleware.py  sql_guard_middleware.py  token_auth_middleware.py
src/dm_mcp/providers/: __init__.py  base_datasource_provider.py  dpc_cluster_provider.py  metadata_provider.py  metrics_export_provider.py  pool_ops_provider.py  query_exec_provider.py
src/dm_mcp/server/: __init__.py  (+5 more)
tests/: README.md  __init__.py  conftest.py  run_test_simple.ps1  run_tests.bat  run_tests.sh  test_datasource_api.http  test_http_mode.http  test_logout.http  test_oauth.http  test_query_tool.http
tests/des_spec/: conftest.py  test_des_1_mcp_protocol.py  test_des_2_query_exec.py  test_des_3_metadata.py  test_des_4_ops.py  test_des_5_security.py  test_des_6_integration_config.py
tests/examples/: example_gather_table_stats_dmasync.py  example_pool_run.py  example_stdio_mode.py
tests/generation/: test_mcp_resources_generated.py  test_mcp_tools_generated.py
tests/integration/: __init__.py  conftest.py  test_auth_flow.py  test_cache_integration.py  test_database_connection.py  test_mcp_callback_mock.py  test_mcp_protocol.py  test_mcp_service_integration.py  test_mcp_service_integration_extended.py  test_service_integration.py
(+846 files in other folders)
